@@ -634,15 +634,22 @@ function add_agg_row_to_renew_table(am_id, sliver_expiration) {
 }
 
 
+// KEITH: Below are the functions needed to make the AM list run on the slice page.
 
-// Functions needed to make the AM list run
+// This function initializes the AM list.
+// It takes the PHP generated elements (right side of the table) and generates the check box list.
 function prepareList() {
+  // Loop through each AM generated by the PHP.
   $('#status_table > tbody').each(function() {
+    // The group it belongs in will be the first class, this grabs the first class if there are more than one.
     var className = $(this).attr('class').split(' ')[0];
+    // This may not be needed, but the group id is the middle section of the class without the prefix or postfix.
     var targetParent = className.substring(3,className.length-3);
+    // Find the check group it belongs in and insert the html for the checkbox
     var parentHTML = $('#am_names #g_'+targetParent+' ul').html();
     $('#am_names #g_'+targetParent+' ul').html(parentHTML+'<li><input type="checkbox" id="box-'+$(this).attr('id').substring(2)+'" class="inner" checked="checked"><span class="checkSib">'+$(this).find('.am_name_field').text()+'</span></li>');
   });
+  // Loops through each top-level check box and sets up the collapsable functionality
   $('#am_names').find('.am_group .collapsable')
     .click( function(event) {
       if (this == event.target) {
@@ -651,27 +658,36 @@ function prepareList() {
       return false;
     })
     .parent().addClass('collapsed');
+    // Initializes the checkboxes and the top-level counter.
     $('#am_names .outer').each(function() {
       $(this).prop('checked',true);
       $(this).siblings('.checkSib').find('.countSelected').html(" ("+$(this).parents('.am_group').find('.inner:checkbox:checked').length+")");
     });
   };
 
+// Function that gets called when the Select All button is clicked.
 function selectAll() {
+  // Loops through all top level checkboxes.
   $('#am_names .outer').each(function() {
+    // Locates and loops through each checkbox within that group.
     $(this).parent().find('.inner').each(function() {
+      // Grabs the id for that checkbox and sets the corresponding box on the right to show.
       var targetID = $(this).attr('id').substring(4);
       $('#status_table #t_'+targetID).removeClass('hidden');
       $(this).prop('checked', true);
     });
+
+    // Sets the top level box to be checked.
     $(this).prop('checked', true).prop('indeterminate', false);
+    // Nulls out the Select Only field.
     $('#checkGroups').val(' ');
-    $('.am_group').each(function() {
-      $(this).find('.countSelected').html(" ("+$(this).find('.inner:checkbox:checked').length+")");
-    });
+    // Sets the selected counter for the group.
+    $(this).parent().find('.countSelected').html(" ("+$(this).parent().find('.inner:checkbox:checked').length+")");
   });
 }
 
+// Function that gets called when the Deselect All button is clicked.
+// Same as above function expect in reverse.
 function deselectAll() {
   $('#am_names .outer').each(function() {
     $(this).parent().find('.inner').each(function() {
@@ -681,21 +697,28 @@ function deselectAll() {
     });
     $(this).prop('checked', false).prop('indeterminate', false);
     $('#checkGroups').val(' ');
-    $('.am_group').each(function() {
-      $(this).find('.countSelected').html(" ("+$(this).find('.inner:checkbox:checked').length+")");
-    });
+    $(this).parent().find('.countSelected').html(" ("+$(this).parent().find('.inner:checkbox:checked').length+")");
   });
 }
 
+// Function that gets called from a few events below for the inner checkboxes.
+// Note that the 'that' parameter is the 'this' from the caller.
+// resetSelect is a boolean to null out the Select Only field.
 function checkBoxes(that, resetSelect) {
     var targetID = $(that).attr('id').substring(4);
     
+    // Toggles the corresponding element on the right side of the table.
     if ($(that).is(':checked')) {
       $('#status_table #t_'+targetID).removeClass('hidden');
     }
     else {
       $('#status_table #t_'+targetID).addClass('hidden');
     }
+
+    // This section is to determine what state the outer checkbox for this box should show as.
+    // First, if all elements inside of it are checked, the outer box is checked.
+    // Second, if some elements inside are checked, the outer box is set to 'indeterminate'.
+    // Third, if no elements are checked, the outer box is unchecked.
     var thatParent = $(that).parents('.am_group').find('.outer');
     if ($(that).parents('.am_group').find('.inner:checkbox:checked').length == $(that).parent().siblings().length+1) {
       thatParent.prop('indeterminate', false).prop('checked', true);
@@ -706,32 +729,39 @@ function checkBoxes(that, resetSelect) {
     else {
       thatParent.prop('indeterminate', false).prop('checked', false);
     }
+    // Sets the count for the parent.
     thatParent.siblings('.checkSib').find('.countSelected').html(" ("+$(that).parents('.am_group').find('.inner:checkbox:checked').length+")");
     if (resetSelect) {
       $('#checkGroups').val(' ');
     }
 }
 
+// Loops through all of the checked elements and triggers a refresh on the corresponding AM on the right.
 function getCheckedStatus() {
   $('#am_names').find('.inner:checkbox:checked').each(function() {
     refresh_agg_row($(this).attr('id').substring(4));
   });
 }
 
+// Function to set up the click events that the table uses.
 function prepareEvents() {
+  // Set up the click events for all of the inner checkboxes.
   $('#am_names .inner').each(function() {
     $(this).click(function() {
       checkBoxes(this, true);
     });
     var that = this;
+    // Set up the name to toggle the checkbox when clicked.
     $(this).siblings('.checkSib').click(function() {
       $(that).prop("checked", !$(that).prop("checked"));
       checkBoxes(that, true);
     });
   });
 
+  // Set up the click events for each outer checkbox.
   $('#am_names .outer').each(function() {
     $(this).click(function(event) {
+      // Depending on the resulting state, set all boxes internal to this one to selected or deselected.
       if ($(this).is(':checked')) {
         $(this).parent().find('.inner').each(function() {
           var targetID = $(this).attr('id').substring(4);
@@ -746,19 +776,24 @@ function prepareEvents() {
           $(this).prop('checked', false);
         });
       }
+      // Update the count and null out the Select Only.
       $(this).siblings('.checkSib').find('.countSelected').html(" ("+$(this).parents('.am_group').find('.inner:checkbox:checked').length+")");
       $('#checkGroups').val(' ');
     });
     var that = this;
+    // Set up the label for the outer checkbox to expand/collapse the group when clicked.
     $(this).siblings('.checkSib').click(function() {
       $(this).parent().toggleClass('expanded').children('ul').toggle();
     });
   });
 
+  // Set up the Select Only box.
   $('#checkGroups').change(function() {
+    // Grab the class to look for, make sure it isn't null, and trim off the prefix.
     var flag = $(this).find('option:selected').attr('class');
     if (flag != undefined) {
       flag = flag.substring(3);
+      // Loop through all inner checkboxes and find which elements match the flag.
       $('#am_names .inner').each(function() {
         var target = $('#status_table #t_'+$(this).attr('id').substring(4)).hasClass(flag);
         if (target && !$(this).is(':checked')) {
@@ -769,24 +804,30 @@ function prepareEvents() {
           $(this).prop('checked',false);
           checkBoxes(this, false);
         }
-        $('.am_group').each(function() {
-          if ($(this).hasClass('expanded')) {
-            $(this).toggleClass('expanded').children('ul').toggle();
-          }
-        });
+      });
+      // Collapse all groups.
+      $('.am_group').each(function() {
+        if ($(this).hasClass('expanded')) {
+          $(this).toggleClass('expanded').children('ul').toggle();
+        }
       });
     }
   });
 }
 
+// These two functions are used to build the various links based off of what is checked in the table.
 function doOnChecked(baseURL, skipWarn) {
   var finalURL = baseURL;
+  // Sets up an array of the checked boxes.
   var checkedBoxes = $('#am_names').find('.inner:checkbox:checked');
 
+  // Makes sure that at least one box is checked.
   if (checkedBoxes.size() > 0) {
+    // If there are more than 10 AMs checked, send them to the warning page.
     if (!skipWarn && checkedBoxes.size() > 10) {
       finalURL = 'tool-aggwarning.php?loc=' + finalURL;
     }
+    // Build the final URL.
     checkedBoxes.each(function() {
       finalURL += '&am_id[]='+$(this).attr('id').substring(4);
     });
@@ -794,6 +835,7 @@ function doOnChecked(baseURL, skipWarn) {
   }
 }
 
+// Grabs the date that the user has checked.
 function doOnRenew(baseURL) {
   var tempURL = baseURL;
   var slice_expiration = $('#renew_field_check').val();
